--- a/styles/gearstyle.css
+++ b/styles/gearstyle.css
@@ -7,7 +7,9 @@
     --primary-font: Poppins;
     --secondary-font: Inter;
     --primary-color: #3A3A3A;
-    --secondary-color:
+    /* --secondary-color: */
+    --button-background-color: #E02C6D;
+    --button-color: white;
 }
 
 * {
@@ -16,10 +18,21 @@
     max-width: 99rem;
 }
 
+.btn-primary {
+    background-color: var(--button-background-color);
+    color: var(--button-color);
+    padding: 10px;
+}
+
+/* header styles */
+header {
+    padding: 70px 100px;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
-    padding: 70px 100px;
+    margin-bottom: 0px;
 }
 
 nav ul {
@@ -43,4 +56,53 @@ nav h3 {
     font-family: var(--primary-font);
     font-size: 20px;
     font-weight: 581;
+}
+
+.header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.banner-title {
+    color: var(--primary-color);
+    font-family: var(--primary-font);
+    width: 30.2rem;
+    height: 110px;
+    font-size: 43px;
+    line-height: 58px;
+    margin-bottom: 0rem;
+}
+
+.banner-description {
+    width: 26.2rem;
+    color: var(--primary-color);
+    font-family: var(--primary-font);
+    font-size: 13px;
+    font-weight: 600;
+    margin-top: 0.8rem;
+    margin-bottom: 0rem;
+}
+
+.header-content>button {
+    border-radius: 20px;
+    margin-top: 0.8rem;
+    margin-right: 0px;
+    border: none;
+    cursor: pointer;
+}
+
+.header-content>button svg {
+    margin-top: 5px;
+    margin-left: 3px;
+}
+
+.header-image img{
+    width: 22.8rem;
+    height: 343px;
+    margin-top: 80px;
+    background-image: url("../images/Circle\ design.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
