--- a/styles/gearstyle.css
+++ b/styles/gearstyle.css
@@ -92,6 +92,10 @@ nav h3 {
     cursor: pointer;
 }
 
+.header-content>button:hover{
+    background-color: #880636;
+}
+
 .header-content>button svg {
     margin-top: 5px;
     margin-left: 3px;
@@ -105,4 +109,47 @@ nav h3 {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+}
+
+/* mobile screen used media query for  */
+@media screen and (max-width:576px) {
+    nav,
+    .header-container{
+        flex-direction: column-reverse;
+    }
+    nav{
+        margin-bottom: 0px;
+    }
+    .header-container{
+        margin-top: 15px;
+    }
+    nav h3{
+        margin: 0px auto;
+        margin-bottom: 20px;
+    }
+    .banner-title{
+        width: 100%;
+        height: 30px;
+        font-size: 25px;
+        margin-top: 50px;
+        margin-bottom: 0px;
+
+    }
+    header{
+        padding: 20px 30px;
+    }
+    .header-content>button{
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 20px auto 0px auto;
+        transition: background-color 0.4s ease-in-out;
+    }
+    .header-content>button:hover{
+        background-color: #880636;
+    }
+    .banner-description{
+        margin-top: 20px;
+    }
 }
