--- a/styles/gearstyle.css
+++ b/styles/gearstyle.css
@@ -122,6 +122,7 @@ nav h3 {
     }
     .header-container{
         margin-top: 15px;
+        /* padding: 10px; */
     }
     nav h3{
         margin: 0px auto;
@@ -130,10 +131,14 @@ nav h3 {
     .banner-title{
         width: 100%;
         height: 30px;
-        font-size: 25px;
+        font-size: 30px;
         margin-top: 50px;
         margin-bottom: 0px;
+        line-height: 35px;
 
+    }
+    .header-content{
+        padding-left: 20px;
     }
     header{
         padding: 20px 30px;
@@ -150,6 +155,6 @@ nav h3 {
         background-color: #880636;
     }
     .banner-description{
-        margin-top: 20px;
+        margin-top: 50px;
     }
 }
