--- a/styles/gearstyle.css
+++ b/styles/gearstyle.css
@@ -2,12 +2,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800;900&display=swap');
 /* Inter font from google font */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;700;800;900&family=Poppins:wght@300;400;600;700;800;900&display=swap');
+/* Roboto */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 
 :root {
     --primary-font: Poppins;
     --secondary-font: Inter;
+    --tertiary-font: Roboto;
     --primary-color: #3A3A3A;
-    /* --secondary-color: */
+    --secondary-color: #5E6366;
     --button-background-color: #E02C6D;
     --button-color: white;
 }
@@ -92,7 +95,7 @@ nav h3 {
     cursor: pointer;
 }
 
-.header-content>button:hover{
+.header-content>button:hover {
     background-color: #880636;
 }
 
@@ -101,7 +104,7 @@ nav h3 {
     margin-left: 3px;
 }
 
-.header-image img{
+.header-image img {
     width: 22.8rem;
     height: 343px;
     margin-top: 80px;
@@ -113,23 +116,88 @@ nav h3 {
 
 /* main styles */
 
-.e-mart{
+.e-mart {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     margin: 120px;
 }
 
-.e-mart img{
+.e-mart img {
     width: 5rem;
 }
 
+/* popular collection styles */
 
+#popular-collection-container {
+    margin: 110px 160px;
+}
 
+.popular-collection-title {
+    width: 217px;
+    height: 58px;
+    margin: 0px auto;
+    color: var(--primary-color);
+    font-family: var(--primary-font);
+    font-size: 23px;
+    font-weight: 600;
+}
 
+.all-card-content{
+    
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    /* grid-template-rows: repeat(3,1fr); */
+    gap: 50px;
+    margin: 0px 100px;
 
+}
+.card-container{
+    width: 275px;
+    height: 395px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    padding: 10px 17px;
+    
+}
+.card-container img{
+    width: 249px;
+    height: 212.48px;
+    border-radius: 5px;
+    margin-top: 40px;
+    margin-bottom: 0px;
+}
 
+.card-container .card-title{
+    color: #18191F;
+    font-family: var(--primary-font);
+    font-size: 24px;
+    font-weight: 500;
+    margin-top: 14px;
+    margin-bottom: 0px;
+}
 
+.card-container .price{
+    color: #000000DE;
+    font-family: var(--secondary-font);
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.card-container .ratings-icon{
+    color: #5E6366;
+    font-family: var(--tertiary-font);
+    font-size: 11.62px;
+    font-weight: 700;
+}
+
+.card-container .description{
+    color: #787885;
+    width: 162.68px;
+    font-family: var(--secondary-font);
+    font-size: 11.52px;
+    font-weight: 700;
+}
 
 
 
@@ -137,22 +205,27 @@ nav h3 {
 
 /* mobile screen used media query for  */
 @media screen and (max-width:576px) {
+
     nav,
-    .header-container{
+    .header-container {
         flex-direction: column-reverse;
     }
-    nav{
+
+    nav {
         margin-bottom: 0px;
     }
-    .header-container{
+
+    .header-container {
         margin-top: 15px;
         /* padding: 10px; */
     }
-    nav h3{
+
+    nav h3 {
         margin: 0px auto;
         margin-bottom: 20px;
     }
-    .banner-title{
+
+    .banner-title {
         width: 100%;
         height: 30px;
         font-size: 30px;
@@ -161,29 +234,51 @@ nav h3 {
         line-height: 35px;
 
     }
-    .header-content{
+
+    .header-content {
         padding-left: 20px;
     }
-    header{
+
+    header {
         padding: 20px 30px;
     }
-    .header-content>button{
+
+    .header-content>button {
         width: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
-        margin: 20px auto 0px auto;
+        margin: 20px auto 40px auto;
         transition: background-color 0.4s ease-in-out;
     }
-    .header-content>button:hover{
+
+    .header-content>button:hover {
         background-color: #880636;
     }
-    .banner-description{
+
+    .banner-description {
         margin-top: 50px;
     }
-    .e-mart{
+
+    .e-mart {
         display: grid;
-        grid-template-columns: repeat(4,1fr);
+        grid-template-columns: repeat(4, 1fr);
         gap: 30px;
+        margin-top: 0px;
     }
+    #popular-collection-container{
+        margin: 0px;
+    }
+    .popular-collection-title{
+        margin: 0px;
+    }
+    .all-card-content{
+        grid-template-columns: 1fr;
+        margin: 20px;
+    }
+    .card-container{
+        width: 80%;
+        padding: 50px;
+    }
+    
 }
